Fixing graphic cutoff in Tailored Nation section

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -208,6 +208,8 @@ h2 {
 
 //Lookbook
 #lookbook {
+  padding-top: 0;
+
   h2 {
     position: absolute;
     color: #fff;
